don't crash on insert at lastLine + 1

easy to trigger with overwrite paste
BUG: 496612